--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -631,7 +631,7 @@ section .container {
 
 .contact .info-box i.bx {
   font-size: 24px;
-  color: #18d26e;
+  color: #AC1041;
   border-radius: 50%;
   padding: 14px;
   float: left;
@@ -668,7 +668,7 @@ section .container {
 }
 
 .contact .info-box .social-links a:hover {
-  color: #18d26e;
+  color: #AC1041;
 }
 
 .contact .php-email-form {
@@ -700,7 +700,7 @@ section .container {
 .contact .php-email-form .sent-message {
   display: none;
   background: rgba(255, 255, 255, 0.08);
-  background: #18d26e;
+  background: #AC1041;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -720,7 +720,7 @@ section .container {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid #AC1041;
   border-top-color: #eee;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -774,7 +774,7 @@ section .container {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #18d26e;
+  background: #AC1041;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -783,7 +783,7 @@ section .container {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #15bb62;
+  background: #FE3372;
 }
 
 @-webkit-keyframes animate-loading {
