--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,7 +234,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #18d26e;
+  color: #AC1041;
   text-decoration: none;
 }
 
