--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,11 +63,17 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   line-height: 1;
   font-weight: 700;
-  font-family: "Poppins", sans-serif;
+  font-family:  'Grenze Gotisch', cursive;
 }
 
-#header h1 a, #header h1 a:hover {
-  color: #fff;
+#header h1 a {
+  color: #AC1041;
+  line-height: 1;
+  display: inline-block;
+}
+
+#header h1 a:hover {
+  color: #ffff;
   line-height: 1;
   display: inline-block;
 }
