--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,7 +466,7 @@ section .container {
   margin: 4px 10px;
 }
 
-.section-title p {
+.section-title a {
   margin: 0;
   margin: -15px 0 15px 0;
   font-size: 36px;
