--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   line-height: 1;
   font-weight: 700;
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'DotGothic16', sans-serif;
 }
 
 #header h1 a {
