--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,8 +74,8 @@ background-image: linear-gradient(180deg, #000000 0%, #16162c 50%, #007dc1 100%)
 }
 
 .background-container img{
-  height: 70vh;
-  width:50vh;
+  height: 80vh;
+  width:80vh;
   position: absolute;
   z-index: 3;
   right: 0px;
@@ -165,12 +165,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header h1 {
-  font-size: 48px;
+  font-size: 80px;
   margin: 0;
   padding: 0;
   line-height: 1;
   font-weight: 700;
-  font-family: 'Kelly Slab', cursive;
+  /*font-family: 'VT323', monospace;*/
+  font-family: 'Turret Road', cursive;
 }
 
 #header h1 a {
