--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,6 +245,16 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+@media (max-width: 442px) {
+  #header h1 {
+    font-size: 36px;
+  }
+  #header h2 {
+    font-size: 15px;
+    line-height: 30px;
+
+}
+
 /* Menu de navegacion */
         /* NAvegación de escritorio */
 
