--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,19 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 
+@media (max-width: 442px) {
+  .background-container img {
+    height: 80vh;
+    width:80vh;
+    position: absolute;
+    z-index: 3;
+    left: -40px;
+    top: 50px;
+    opacity: 0.5;
+  }
+
+}
+
 /* Header   */
 
 #header {
@@ -1009,4 +1022,6 @@ section .container {
   .portfolio-details .portfolio-info {
     padding-top: 20px;
   }
+}
+
 }
