--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,7 +243,7 @@ h1, h2, h3, h4, h5, h6 {
   #header h2 {
     font-size: 20px;
     line-height: 30px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;;
   }
   #header .social-links {
     margin-top: 15px;
