--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ h1, h2, h3, h4, h5, h6 {
     position: fixed;
     z-index: 3;
     left: -100px;
-    top: 50px;
+    top: 150px;
     opacity: 0.6;
   }
 }
@@ -260,10 +260,13 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 30px;
   }
   #header h2 {
-    font-size: 15px;
+    font-size: 18px;
     line-height: 30px;
   }
-
+  #header .social-links {
+    margin-top: 15px;
+    margin-bottom: 225px;
+  }
 }
 
 /* Menu de navegacion */
