--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,8 +152,8 @@ h1, h2, h3, h4, h5, h6 {
     width: 90vh;
     position: fixed;
     z-index: 3;
-    
-  
+    left: -100px;
+    top: 50px;
     opacity: 0.6;
   }
 }
