--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -978,7 +978,7 @@ section .container {
   width: 12px;
   height: 12px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.3) !important;
+  background-color: rgb(255, 255, 255) !important;
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
