--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,9 +80,15 @@ background-image: linear-gradient(180deg, #000000 0%, #16162c 50%, #007dc1 100%)
   z-index: 3;
   right: 0px;
   top: 50px;
-  opacity: 0.5;
+  opacity: 0.4;
 }
 
+@media (min-width: 992px) {
+
+  .background-container img{
+    opacity: 0.9;
+  }
+}
 
 .stars {
  background: black url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
